--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "muhammara": "^3.5.0",
     "node-forge": "^1.3.1",
     "node-signpdf": "^1.5.0",
     "pdf-lib": "^1.17.1"
