--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fastify": "^4.10.2",
+    "fastify-multer": "^2.0.3",
     "muhammara": "^3.5.0",
     "node-forge": "^1.3.1",
-    "node-signpdf": "^1.5.0",
-    "pdf-lib": "^1.17.1"
+    "node-signpdf": "^1.5.0"
   },
   "type": "module"
 }
