--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "signature-mash",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "ts-node src/index.ts",
+    "dev": "npx nodemon --exec ts-node ./src/index.ts  --watch src --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/type-provider-typebox": "^2.4.0",
+    "@sinclair/typebox": "^0.25.11",
     "fastify": "^4.10.2",
     "fastify-multer": "^2.0.3",
     "muhammara": "^3.5.0",
     "node-forge": "^1.3.1",
-    "node-signpdf": "^1.5.0"
+    "node-signpdf": "^1.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
-  "type": "module"
+  "devDependencies": {
+    "@types/node": "^18.11.11"
+  }
 }
