--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
-        "rootDir": "src",
+        "outDir": "dist",
     },
     "include": [
         "src/**/*.ts",
