--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sinclair/typebox": "^0.25.11",
     "fastify": "^4.10.2",
     "fastify-multer": "^2.0.3",
+    "lodash": "^4.17.21",
     "muhammara": "^3.5.0",
     "node-forge": "^1.3.1",
     "node-signpdf": "^1.5.0",
