--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         "preserveConstEnums": true,
         "sourceMap": true,
         "outDir": "dist",
+        "allowJs": true,
+        "esModuleInterop": true
     },
     "include": [
         "src/**/*.ts",
