--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,13 @@
 variables:
-  DOCKER_DRIVER: overlay
-  CONTAINER_IMAGE_PREFIX: registry.gitlab.com/mashbo/signature-mash:$CI_COMMIT_SHA
+  DOCKER_DRIVER: overlay2
+  CONTAINER_IMAGE_NAME: registry.gitlab.com/mashbo/signature-mash:$CI_COMMIT_SHA
 
 stages:
   - lint
   - build
 
 before_script:
-  - echo $CONTAINER_IMAGE_PREFIX
+  - echo $CONTAINER_IMAGE_NAME
   - echo $CI_COMMIT_REF_SLUG
   - echo $CI_JOB_NAME
   - echo $CI_JOB_STAGE
@@ -30,7 +30,7 @@ build:
       command: [ "--tls=false" ]
   script:
     - docker info
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - eval $(ssh-agent -s)
-    - env DOCKER_BUILDKIT=1 docker build --network host --ssh default -t $CONTAINER_IMAGE_PREFIX -f Dockerfile .
-    - docker push $CONTAINER_IMAGE_PREFIX
+    - env DOCKER_BUILDKIT=1 docker build --network host --ssh default -t $CONTAINER_IMAGE_NAME -f Dockerfile .
+    - docker push $CONTAINER_IMAGE_NAME
